syntax = "proto3";

package dps_pb;
option go_package = "./dps_pb";
import "google/protobuf/empty.proto";
// export PATH=$PATH:$GOPATH/bin
// protoc --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative ./dps_server.proto

message CreateTopicReq {
  string TopicName = 1;
  DeliverPolicy DeliverPolicy = 2;
}

enum TopicActive {
  ACTIVE = 0;
  INACTIVE = 1;
}

enum DeliverPolicy {
  AT_LEAST_ONCE = 0;
  AT_MOST_ONCE = 1;
}

message CreateTopicRes {
  string TopicId = 1;
  string Name = 2;
  TopicActive Active = 3;
  string DeliveryPolicy = 4;
}

message CommonRes {
  int32 Status = 1;
  string Message = 2;
}

message PublishReq {
  Item item = 1;
}

message PublishRes {
  int32 Status = 1;
  string Message = 2;
}

message Item {
  string TopicId = 1;
  int32 Priority = 2; // Lower number mean higher priority
  bytes Payload = 3; // immutable binary blob. Feel free to put what ever u want
  bytes Metadata = 4; // mutable binary blob. Feel free to put what ever u want
  int32 DeliverAfter = 5; // Timestamp where item should be dequeue
}

message DequeueReq {
  map<string,int32> DequeueTopic = 1;
}

message DequeueRes {
  repeated Item items = 1;
}

message AckReq {
  string Topic = 1;
  string DpsAssignedUniqueId = 2;
}

message NAckReq {
  string Topic = 1;
  string DpsAssignedUniqueId = 2;
}

message GetActiveTopicsRes {
  repeated Topic Topics = 1;
}

message Topic {
  string Id = 1;
  string Name = 2;
  string DeliveryPolicy = 3;
}

service DpsService {
  rpc Publish(PublishReq) returns (PublishRes) {}
  rpc GetActiveTopics(google.protobuf.Empty) returns (GetActiveTopicsRes){}
  rpc CreateTopic(CreateTopicReq) returns (CreateTopicRes) {}
  rpc Dequeue(DequeueReq) returns (DequeueRes) {}
  rpc Ack(AckReq) returns (CommonRes) {}
  rpc NAck(NAckReq) returns (CommonRes) {}
}
